# hydrogen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  hydrogen.code-workspace  imgui.ini  shadergen.py
.github/workflows/: autobuild.yml  cmake-multi-platform.yml
android/hydrogen/: local.properties
android/hydrogen/app/: build.gradle
android/hydrogen/app/src/com/hydrogentlemen/hydrogen/: HydrogenRuntime.java
android/hydrogen/app/src/main/: AndroidManifest.xml
android/hydrogen/app/src/main/java/com/hydrogentlemen/hydrogen/: HydrogenRuntimeActivity.java
core/: CMakeLists.txt
core/include/core/: actor.h  actorid.h  actorspec.h  actorspecasset.h  asset.h  assetdescription.h  assetindex.h  assets.h  component.h  componentbitmask.h  engine.h  engineevents.h  event.h  eventqueue.h  log.h  mesh.h  model.h  netrequestjob.h  netrequestresult.h  netrequestthreadcontext.h  project.h  projectassetentry.h  runtimeassets.h  runtimeconsole.h  runtimeengine.h  runtimesystem.h  runtimesystems.h  scene.h  scenespec.h  scenespecasset.h  serverengine.h  system.h  systems.h  transform.h  widgets.h  window.h  yamloverrides.h
core/include/core/gravity/: gravity.h
core/include/core/input/: dualkeyinputactionsource.h  input.h  inputaction.h  inputactionsource.h  keyinputactionsource.h
core/include/core/math/: color.h  mat4x4.h  math.h  mathdefs.h  quaternion.h  vector2.h  vector3.h  vectors.h
core/include/core/physics/: physics.h  raycast.h  rigidbody.h  rigidbodyasset.h  rigidbodycomp.h
core/include/core/project/: project.h  projectactionentry.h  projectassetentry.h
core/include/core/render/: gl4renderer.h  gles3renderer.h  mesh.h  meshasset.h  meshcomp.h  modelasset.h  modelcomp.h  renderer.h  shader.h  texture.h  vertex.h
core/include/core/script/: script.h  scriptasset.h  scriptcomp.h  scripting.h
core/include/core/sprinkles/: testsystem.h
core/include/core/systems/: gravity.h  sys_gravity.h  sys_rendering.h
core/include/core/systems/render/: gl4renderer.h  gles3renderer.h  mesh.h  meshasset.h  meshcomp.h  renderer.h  shader.h
core/include/core/systems/renderer/: renderer.h  shader.h  vertex.h
core/include/core/systems/script/: script.h  scriptasset.h  scriptcomp.h  scripting.h
core/include/core/theming/: guicolors.h  theming.h
core/shaders/: fs_default.glsl  fs_default.sc  vs_default.glsl  vs_default.sc
core/shaders/core/: fs_default.glsl  vs_default.glsl
core/shaders/es/: fs_default.glsl  vs_default.glsl
core/src/: actorspec.cc  actorspecasset.cc  asset.cc  assets.cc  engine.cc  event.cc  eventqueue.cc  mesh.cc  model.cc  project.cc  runtimeassets.cc  runtimeconsole.cc  runtimeengine.cc  runtimesystem.cc  runtimesystems.cc  scene.cc  scenespec.cc  scenespecasset.cc  serverengine.cc  system.cc  systems.cc  transform.cc  widgets.cc  window.cc  yamloverrides.cc
core/src/gravity/: gravity.cc
core/src/input/: dualkeyinputactionsource.cc  input.cc  inputaction.cc  keyinputactionsource.cc
core/src/math/: mat4x4.cc  quaternion.cc  vector2.cc  vector3.cc
core/src/physics/: physics.cc  raycast.cc  rigidbody.cc  rigidbodyasset.cc  rigidbodycomp.cc
core/src/project/: project.cc
core/src/render/: gl4renderer.cc  gles3renderer.cc  mesh.cc  meshasset.cc  meshcomp.cc  modelasset.cc  modelcomp.cc  renderer.cc  shader.cc  texture.cc
core/src/script/: script.cc  scriptasset.cc  scriptcomp.cc  scripting.cc
core/src/sprinkles/: gravity.cc
core/src/systems/: gravity.cc  sys_gravity.cc  sys_rendering.cc
core/src/systems/render/: gl4renderer.cc  gles3renderer.cc  mesh.cc  meshasset.cc  meshcomp.cc  renderer.cc  shader.cc
core/src/systems/renderer/: renderer.cc  shader.cc
core/src/systems/script/: script.cc  scriptasset.cc  scriptcomp.cc  scripting.cc
core/src/theming/: theming.cc
docs/: ScriptingNotes.md
editor/: CMakeLists.txt
editor/include/editor/: asseteditorwindow.h  editor.h  editorengine.h  editorwindow.h  errors.h
editor/include/editor/platform/: environment.h  invoke.h  path.h
editor/include/editor/visuals/: scenespecrenderer.h
editor/include/editor/windows/: meshimporter.h  projectexplorer.h  sceneeditor.h
editor/shaders/core/: fs_viewport.glsl  vs_viewport.glsl
editor/src/: asseteditorwindow.cc  editor.cc  editorengine.cc  editorwindow.cc  main.cc
editor/src/platform/win32/: environment_win32.cc  invoke_win32.cc  path_win32.cc
editor/src/visuals/: scenespecrenderer.cc
editor/src/windows/: meshimporter.cc  projectexplorer.cc  sceneeditor.cc
oldserver/: CMakeLists.txt  corewrap.py  hyassetserver.py  main.py
oldserver/wrap/: wrap.cc
runtime/: CMakeLists.txt
runtime/assets/: bush.hymodel  bush01.hymodel  helmet.hymodel  project.hyproject  project.yml  test_actor.hyactor  test_actor.yml  test_actor2.hyactor  test_actor2.yml  test_actor3.hyactor  test_actor3.yml  test_model.hymodel  test_model.yml  test_model2.hymodel  test_model2.yml  test_scene.hyscene  test_scene.yml  test_script.hyscript  test_script.yml
runtime/assets/forest_models/models/: bush01.glb  bush02.glb  bush02.hymodel  bush03.glb  bush03.hymodel  bush04.glb  bush04.hymodel  bush05.glb  bush05.hymodel  bush06.glb  bush06.hymodel  bush07.glb  bush07.hymodel  bush08.glb  bush08.hymodel  tree01.glb  tree02.glb  tree02.hymodel  tree03.glb  tree03.hymodel  tree04.glb  tree04.hymodel  tree05.glb  tree05.hymodel  tree06.glb  tree06.hymodel  tree07.glb  tree07.hymodel  tree08.glb  tree08.hymodel  tree09.glb  tree09.hymodel  tree10.glb  tree10.hymodel  tree11.glb  tree11.hymodel  tree12.glb  tree12.hymodel  tree13.glb  tree13.hymodel  (+46 more)
runtime/assets/scripts/: test1.as
runtime/src/: main.cc
server/: CMakeLists.txt  corewrap.py  hyassetserver.py  main.py
server/assets/: helmet.hymodel  project.hyproject  project.yml  test_model.yml  test_model2.yml  test_scene.yml
server/assets/box/: Box.gltf
server/assets/terrain/: canyon1.gltf
server/src/: main.cc
server/templates/: 404.html  bad_asset_get.html  status.html
server/wrap/: wrap.cc
